fixed alignment of cards

--- a/public/style.css
+++ b/public/style.css
@@ -406,7 +406,7 @@ section {
     color: var(--text-secondary);
     margin-bottom: 3rem;
     line-height: 1.8;
-    max-width: 90%;
+    /* max-width: 90%; */
 }
 
 .home-buttons {
@@ -475,6 +475,12 @@ section {
     gap: 2rem;
 }
 
+@media screen and (max-width: 768px) {
+    .social-media {
+        justify-content: center;
+    }
+    
+}
 .social-media a {
     display: flex;
     align-items: center;
@@ -840,7 +846,7 @@ section {
 
 .services-container {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+    /* grid-template-columns: repeat(auto-fit, minmax(350px, 1fr)); */
     gap: 3rem;
     max-width: 1200px;
     margin: 0 auto;
@@ -1100,7 +1106,7 @@ section {
 
 .projects-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    /* grid-template-columns: repeat(auto-fit, minmax(400px, 1fr)); */
     gap: 3rem;
     margin-bottom: 3rem;
 }
