--- a/src/components/style.css
+++ b/src/components/style.css
@@ -406,7 +406,7 @@ section {
     color: var(--text-secondary);
     margin-bottom: 3rem;
     line-height: 1.8;
-    max-width: 90%;
+    /* max-width: 90%; */
 }
 
 .home-buttons {
@@ -473,6 +473,12 @@ section {
 .social-media {
     display: flex;
     gap: 2rem;
+}
+@media screen and (max-width: 768px) {
+    .social-media {
+        justify-content: center;
+    }
+    
 }
 
 .social-media a {
@@ -732,7 +738,7 @@ section {
 
 .services-container {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+    /* grid-template-columns: repeat(auto-fit, minmax(350px, 1fr)); */
     gap: 3rem;
     max-width: 1200px;
     margin: 0 auto;
@@ -992,7 +998,7 @@ section {
 
 .projects-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    /* grid-template-columns: repeat(auto-fit, minmax(400px, 1fr)); */
     gap: 3rem;
     margin-bottom: 3rem;
 }
